Update French translations in about pages

--- a/about/engagement.html
+++ b/about/engagement.html
@@ -66,9 +66,11 @@
     <div class="Nos-engagements">
         <h2>Nos engagements</h2>
         <p class="first-paragraph">
-            Nous prenons soin des personnes et de leur environnement
-            pour que les organisations et la Société fonctionnent mieux.
-            Nos stratégies et nos actions se fondent sur 4 engagements essentiels.
+            Nous consacrons notre attention à l'épanouissement des individus et à
+            l'amélioration de leur cadre de vie, contribuant ainsi à optimiser le
+            fonctionnement des organisations et de la société dans son ensemble.
+            Nos approches stratégiques et nos initiatives reposent sur quatre
+            engagements fondamentaux.
         </p>
         <ul class="nos-engagement">
             <li><img src="assets/badges/1.png" alt="badge-1">
