--- a/about/expertise.html
+++ b/about/expertise.html
@@ -68,11 +68,11 @@
     <h1 class="title">Notre Expertise</h1>
     <img src="assets/pages/expertise/Expertise.jpg" style="height: auto; width: 80%; margin: auto; margin-left: 10%; margin-right: 10%;" alt="image introduction expertise">
     <p>
-        Quel que soit l’environnement : bureaux, industries,
-        centres commerciaux, grandes surfaces,  espaces publics
-        tels que gares et aéroports, établissements de santé, A
-        Simple Way propose une  gamme complète de services de nettoyage
-        professionnel adaptés aux besoins et exigences  de chaque client.
+        Quel que soit le milieu – bureaux, industries, centres commerciaux,
+        grandes surfaces, espaces publics tels que gares et aéroports,
+        établissements de santé ……. A Simple Way offre une gamme exhaustive
+        de services professionnel adaptés aux besoins spécifiques de chaque
+        client.
     </p>
     <h2>Une Expertise Multisectorielle</h2>
     <ul class="expertise">
