--- a/about/innovation.html
+++ b/about/innovation.html
@@ -68,16 +68,17 @@
 <body>
     <img class="touch-hologram" src="assets/pages/innovation/Innovation.jpg" alt="touching hologram">
     <div class="first-title">
-        <h2>Une stratégie d'innovation au service de nos clients</h2>
+        <h2>STRATÉGIE D'INNOVATION AU SERVICE DE NOS CLIENTS </h2>
     </div>
     <p class="strategie-innovation">
-        L’offre ASW bénéficie d’une démarche d’innovation très pragmatique.
-        Le Groupe s’intéresse à des innovations existantes ou en cours de développement,
-        en vue de déploiements rapides. Chaque innovation étudiée doit avoir une
-        application concrète et pouvoir s’intégrer dans une offre commercialisable.
-        Les innovations susceptibles de répondre à un besoin identifié sont testées
-        en partenariat avec des clients pilotes (proof of concept). En fonction des
-        résultats observés, elles peuvent être ensuite déployées
+        L'offre ASW repose sur une démarche d'innovation pragmatique.
+        Notre groupe s'intéresse aux innovations existantes ou en cours
+        de développement, en vue de déploiements rapides. Chaque innovation
+        étudiée doit avoir une application concrète et s'intégrer dans une
+        offre commercialisable. Les innovations susceptibles de répondre à
+        des besoins identifiés sont testées en partenariat avec des clients
+        pilotes (proof of concept). En fonction des résultats observés, elles
+        peuvent ensuite être déployées.
     </p>
     <div class="ecosystem-atalian">
         <h2>l'écosystème innovation ASW</h2>
