--- a/about/values.html
+++ b/about/values.html
@@ -69,56 +69,75 @@
     <div class="nos-valeur">
         <h2>Nos valeurs</h2>
         <p class="first_paragraph">
-            ASW a forgé son identité et construit son développement
-            sur un socle de valeurs pérennes partagées par ses dirigeants
-            et ses collaborateurs.
+            ASW a érigé son identité et bâti sa croissance sur un
+            ensemble de valeurs durables, solidement ancrées dans
+            les convictions partagées par ses dirigeants et ses
+            collaborateurs.
         </p>
         <ul class="nos_valeur">
             <li style="background-color: chocolate;"><img src="assets/pages/values/customer focus.png" alt="initiative">
                 <div class="initiative">
-                <h3 style="color: black;">Focus client</h3>
+                <h3 style="color: black;">FOCUS CLIENT DÉDIÉ À VOS BESOINS</h3>
                 <p>
-                    A l’écoute de nos clients pour faire de leurs demandes et besoins une quête de chaque jour visant leur satisfaction en continue
+                    À l'écoute constante de nos clients, nous transformons leurs demandes et besoins en une quête quotidienne, aspirant à une satisfaction continue.
                 </p>
                 </div>
             </li>
             <li style="background-color: darkgrey;"><img src="assets/pages/values/bien être collab.png" alt="ambition">
                 <div class="initiative">
-                    <h3>Bien être des collaborateurs</h3>
+                    <h3>ÉPANOUISSEMENT DU CAPITAL HUMAIN**</h3>
                     <p>
-                        Nous veillons à ce que notre richesse humaine évolue et s’épanouisse d’un point de vue professionnel pour apporter à ASW et ainsi nos clients une valeur ajoutée basée sur l'intelligence collective
+                        Nous nous engageons à favoriser l'évolution et
+                        l'épanouissement professionnel de notre précieux
+                        capital humain, afin d'apporter à ASW et, par extension,
+                        à nos clients, une valeur ajoutée fondée sur l'intelligence
+                        collective.
                     </p>
                 </div>
             </li>
             <li style="background-color: chocolate;"><img src="assets/pages/values/supervision autonome.png" alt="ouverture">
                 <div class="initiative">
-                    <h3 style="color: black;">Supervision Autonome</h3>
+                    <h3 style="color: black;">AUTOGESTION SURVEILLÉE</h3>
                     <p>
-                        Nous offrons une gestion autonome complète des installations prises en charge. En plus du personnel dédié aux activités, notre mission est de gérer responsablement les facilities et offrir aux clients un service intégré basé SLA.
+                        Nous proposons une supervision autonome exhaustive des
+                        installations sous notre responsabilité.En complément
+                        des équipes spécialisées dans les opérations, notre objectif
+                        est de gérer de manière responsable les équipements et de fournir
+                        aux clients un service intégré basé sur des accords de niveau de
+                        service (SLA).
                     </p>
                 </div>
             </li>
             <li style="background-color: darkgrey;"><img src="assets/pages/values/vision d'ensemble.png" alt="éthique">
                 <div class="initiative">
-                    <h3>Vision d'ensemble</h3>
+                    <h3>VISION GLOBALE</h3>
                     <p>
-                        Nous gérons vos installations et répondons à vos exigences et celles de vos clients avec un monitoring digitalisé, transparent et partagé. Nos performances communes basées KPIs sont affichées dans la transparence totale.
+                        Nous administrons vos installations en adoptant une approche numérique,
+                        transparente et partagée pour répondre à vos exigences ainsi qu'à celles
+                        de vos clients. Nos performances communes, évaluées à partir de KPIs, sont
+                        exposées dans une transparence totale.
                     </p>
                 </div>
             </li>
             <li style="background-color: chocolate;"><img src="assets/pages/values/travail d'équipe.png" alt="éthique">
                 <div class="initiative">
-                    <h3 style="color: black;">Travail d'équipe</h3>
+                    <h3 style="color: black;">ESPRIT D'ÉQUIPE</h3>
                     <p>
-                        Les grands défis ne s’affrontent qu’avec une équipe unie, regardant dans la même direction. Nous encourageons le personnel à être fort de proposition pour que  les directeurs responsables puissent les évaluer et les mettre en place.
+                        Les défis majeurs ne peuvent être relevés que par une équipe unie,
+                        orientée vers un objectif commun. Nous encourageons chaque membre du
+                        personnel à être proactif, permettant ainsi aux directeurs responsables
+                        d'évaluer et de mettre en œuvre leurs propositions.
                     </p>
                 </div>
             </li>
             <li style="background-color: darkgrey;"><img src="assets/pages/values/protection environnement.png" alt="éthique">
                 <div class="initiative">
-                    <h3>Protection de l'environnement</h3>
+                    <h3>ENGAGEMENT ENVIRONNEMENTAL</h3>
                     <p>
-                        Parce que nous voulons un monde meilleur pour nos enfants, Nous ne pensons pas qu’il existe une seule et unique solution mais, au contraire, qu’il peut toujours y avoir une solution meilleure qui protège notre environnement.
+                        Dans notre quête d'un monde meilleur pour les générations futures,
+                        nous ne croyons pas en une solution unique, mais plutôt en la
+                        possibilité constante d'identifier des solutions meilleures qui
+                        préservent notre environnement.
                     </p>
                 </div>
             </li>
