Fix formatting in about.html and values.html

--- a/about/about.html
+++ b/about/about.html
@@ -176,7 +176,8 @@
                     de nos clients, grâce à notre expérience approfondie et à notre expertise éprouvée.
                     <br><br>
                     <b>AU NOM DE TOUTE L'EQUIPE D' A SIMPLE WAY, NOUS NOUS ENGAGEONS A FAIRE DE CHAQUE
-                        INTERACTION AVEC NOS CLIENTS UNE EXPERIENCE EXCEPTIONNELLE.</b>
+                        INTERACTION AVEC NOS CLIENTS UNE EXPERIENCE EXCEPTIONNELLE.
+                    </b>
 
                 </p>
                 <h3>M.Halim FARAJALLAH</h3>
