--- a/about/values.html
+++ b/about/values.html
@@ -85,7 +85,7 @@
             </li>
             <li style="background-color: darkgrey;"><img src="assets/pages/values/bien être collab.png" alt="ambition">
                 <div class="initiative">
-                    <h3>ÉPANOUISSEMENT DU CAPITAL HUMAIN**</h3>
+                    <h3>ÉPANOUISSEMENT DU CAPITAL HUMAIN</h3>
                     <p>
                         Nous nous engageons à favoriser l'évolution et
                         l'épanouissement professionnel de notre précieux
